results/SpecGenBench/4-shot/log-AbsSeq-2023_11_27_17_00_36.txt
public class AbsSeq {
	//@ requires Integer.MIN_VALUE <= num && num <= Integer.MAX_VALUE;
	//@ ensures \result >= 0;
	//@ ensures \result == (num < 0) ? (-num) : (num);
	public int Abs(int num) {
		return ((num < 0) ? (-num) : (num));
	}
}
/home/max/Documents/JMLGPT/tmp/AbsSeq.java:4: error: incomparable types: int and boolean
	//@ ensures \result == (num < 0) ? (-num) : (num);
	                    ^
/home/max/Documents/JMLGPT/tmp/AbsSeq.java:4: error: incompatible types: int cannot be converted to boolean
	//@ ensures \result == (num < 0) ? (-num) : (num);
	                                 ^
2 errors

